// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled text input 1`] = `
<input
  aria-invalid={false}
  aria-label="disabled text input"
  className="pf-c-form-control"
  data-ouia-component-id="OUIA-Generated-TextInputBase-3"
  data-ouia-component-type="PF4/TextInput"
  data-ouia-safe={true}
  disabled={true}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  readOnly={false}
  required={false}
  type="text"
/>
`;

exports[`invalid text input 1`] = `
<input
  aria-invalid={true}
  aria-label="invalid text input"
  className="pf-c-form-control"
  data-ouia-component-id="OUIA-Generated-TextInputBase-5"
  data-ouia-component-type="PF4/TextInput"
  data-ouia-safe={true}
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  readOnly={false}
  required={false}
  type="text"
  value="test input"
/>
`;

exports[`readonly text input 1`] = `
<input
  aria-invalid={false}
  aria-label="readonly text input"
  className="pf-c-form-control"
  data-ouia-component-id="OUIA-Generated-TextInputBase-4"
  data-ouia-component-type="PF4/TextInput"
  data-ouia-safe={true}
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  readOnly={true}
  required={false}
  type="text"
  value="read only"
/>
`;

exports[`simple text input 1`] = `
<input
  aria-invalid={false}
  aria-label="simple text input"
  className="pf-c-form-control"
  data-ouia-component-id="OUIA-Generated-TextInputBase-2"
  data-ouia-component-type="PF4/TextInput"
  data-ouia-safe={true}
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  readOnly={false}
  required={false}
  type="text"
  value="test input"
/>
`;

exports[`validated text input 1`] = `
<TextInputBase
  aria-label="validated text input"
  className=""
  innerRef={null}
  isDisabled={false}
  isLeftTruncated={false}
  isReadOnly={false}
  isRequired={false}
  onChange={[MockFunction]}
  ouiaSafe={true}
  required={true}
  type="text"
  validated="error"
  value="test input"
/>
`;

exports[`validated text input success 1`] = `
<TextInput
  aria-label="validated text input"
  onChange={[MockFunction]}
  required={true}
  validated="success"
  value="test input"
>
  <TextInputBase
    aria-label="validated text input"
    className=""
    innerRef={null}
    isDisabled={false}
    isLeftTruncated={false}
    isReadOnly={false}
    isRequired={false}
    onChange={[MockFunction]}
    ouiaSafe={true}
    required={true}
    type="text"
    validated="success"
    value="test input"
  >
    <input
      aria-invalid={false}
      aria-label="validated text input"
      className="pf-c-form-control pf-m-success"
      data-ouia-component-id="OUIA-Generated-TextInputBase-6"
      data-ouia-component-type="PF4/TextInput"
      data-ouia-safe={true}
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value="test input"
    />
  </TextInputBase>
</TextInput>
`;

exports[`validated text input success 2`] = `
<TextInput
  aria-label="validated text input"
  onChange={[MockFunction]}
  required={true}
  validated="warning"
  value="test input"
>
  <TextInputBase
    aria-label="validated text input"
    className=""
    innerRef={null}
    isDisabled={false}
    isLeftTruncated={false}
    isReadOnly={false}
    isRequired={false}
    onChange={[MockFunction]}
    ouiaSafe={true}
    required={true}
    type="text"
    validated="warning"
    value="test input"
  >
    <input
      aria-invalid={false}
      aria-label="validated text input"
      className="pf-c-form-control pf-m-warning"
      data-ouia-component-id="OUIA-Generated-TextInputBase-7"
      data-ouia-component-type="PF4/TextInput"
      data-ouia-safe={true}
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value="test input"
    />
  </TextInputBase>
</TextInput>
`;
